# Ray-Tracing

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  imgui.ini
app/include/GUI/: BVHsettingsGUI.h  CameraComponentGUI.h  DockspaceGUI.h  InspectorGUI.h  PerformanceCounterGUI.h  SkyBoxGUI.h
app/include/scenes/: Scene1.hpp
app/resources/models/: .gitignore
app/src/: application.cpp
core/: CMakeLists.txt
core/include/core/: Renderer.h
core/include/core/ObjParser/: ObjParser.h
core/include/core/camera/: Camera.hpp  CameraHandler.hpp
core/include/core/gl_util/: ComputeShader.h  ComputeTexture.h  OpenGLdebugFuncs.h
core/resources/shaders/: ComputePostProcessing.comp  ComputeRayTracing.comp
core/src/: Renderer.cpp
core/src/ObjParser/: ObjParser.cpp
core/src/camera/: Camera.cpp  CameraHandler.cpp
core/src/gl_util/: ComputeShader.cpp  ComputeTexture.cpp  OpenGLdebugFuncs.cpp
